# furiosa_opt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  release.yml
benches/: transform_bench.rs
benches/results/: BENCHMARK_REPORT.md  benchmark_detailed.json  benchmark_results.json
examples/: analyze.rs  benchmark.rs  cf_analysis.rs  ln_analysis.rs  optimize_model.rs  pattern_analysis.rs  python_usage.py  test_ln_fusion.rs  test_opset_upgrade.rs
proto/: onnx.proto
python/: README.md
python/furiosa_optimizer/: __init__.py
scripts/: build.sh
src/: lib.rs
src/builder/: cleanup.rs  fields.rs  mod.rs  model.rs
src/error/: mod.rs
src/graph/: accessors.rs  context.rs  maps.rs  mod.rs  mutators.rs
src/io/: mod.rs  reader.rs  validation.rs  writer.rs
src/opset/: mod.rs
src/pattern/: matcher.rs  mod.rs  ops.rs  traversal.rs
src/proto/: extensions.rs  mod.rs
src/python/: mod.rs
src/tensor/: convert.rs  dtype.rs  mod.rs  shape.rs
src/traits/: mod.rs
src/transform/: bridge.rs  core.rs  eliminate.rs  fuse.rs  mod.rs
src/transformers/: common.rs  constant_fold.rs  convert_negative_pads_to_slice.rs  convert_prelu_to_relu.rs  decompose_bn.rs  eliminate.rs  fuse_attention.rs  fuse_bias_gelu.rs  fuse_conv.rs  fuse_conv_bn.rs  fuse_conv_mul_add.rs  fuse_gather_matmul.rs  fuse_gelu.rs  fuse_gemm.rs  fuse_layer_norm.rs  fuse_pad.rs  fuse_skip_layer_norm.rs  infer.rs  mod.rs  optimize_reshape.rs  optimize_transpose.rs  polish_model.rs
src/transformers/experimental/: eliminate_detection_postprocess.rs  embedding_bag_porting.rs  fuse_div_for_bert.rs  mod.rs  reify_conv_for_bert.rs
tests/: analyze_roberta.py  benchmark_comparison.py  benchmark_detailed.py  benchmark_roberta.py  debug_gelu_pattern.py  test_attention_fusion.py  test_bias_gelu.py  test_gelu_runtime.py  test_gemm_attributeproto.py  test_onnxruntime.py  test_skip_layernorm.py  verify_roberta.py  verify_synthetic_roberta.py
